# BARD

./: CMakeLists.txt  LICENSE.txt  README.md
CMake/: StartVS.bat.in  SuperBuild.cmake  bardExternalProjectHelperMacros.cmake
CMake/CMakeExternals/: ArUco.cmake  OpenCV.cmake  VTK.cmake
Code/: CMakeLists.txt  bard.cxx  bardArucoProcessor.cxx  bardArucoProcessor.h  bardCalibratedCamera.cxx  bardCalibratedCamera.h  bardCameraCalibration.cxx  bardFileIO.cxx  bardFileIO.h  bardGrabber.cxx  bardHelloWorld.cxx  bardMainRenderingWidget.cxx  bardMainRenderingWidget.h  bardMainWindow.cxx  bardMainWindow.h  bardMainWindow.ui  bardMaths.cxx  bardMaths.h  bardModelData.cxx  bardModelData.h  bardOpenCVVideoSource.cxx  bardOpenCVVideoSource.h  bardPivotCalibration.cxx  bardPnPRegistration.cxx  bardPnPRegistration.h  bardProcrustes.cxx  bardRegistrationInterface.cxx  bardRegistrationInterface.h  bardTagData.cxx  bardTagData.h  bardTagProcessingInterface.cxx  bardTagProcessingInterface.h  bardTrackingModelData.cxx  bardTrackingModelData.h  bardTrackingModelInterface.cxx  bardTrackingModelInterface.h  bardVTKModelInterface.cxx  bardVTKModelInterface.h  bardVTKModelPipeline.cxx  bardVTKModelPipeline.h  (+2 more)
Data/: intrinsics.txt  models.xlsx  pointer.txt  world.txt
Doc/: MainPage.dox
Doc/Doxygen/: barddoxygen.pl.in  doxygen.config.in
